--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -6,3 +6,7 @@ input:focus {
     outline: none;
     box-shadow: none;
 }
+
+.navbar-text {
+    @apply flex justify-between gap-2 py-1 pr-3 text-sm transition pl-4 text-zinc-900 dark:text-white;
+}
