tailwind.css: remove default styling on iOS

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+a, button {
+    -webkit-tap-highlight-color: transparent;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
 input:focus {
     outline: none;
     box-shadow: none;
